<resources>
    <string name="app_name">APP de recetas</string>

    <string name="regresar">Volver</string>

    <string name="saludo">Bienvenido</string>

    <string name="info">Ingresa con tu mail o nombre de usuario y contraseña</string>

    <string name="hint_mail">Ingresa tu Mail</string>

    <string name="hint_contraseña">Ingresa tu Contraseña</string>
    
    <string name="codigoValidacionUsuario">Validar Cuenta</string>

    <string name="checkbox">Recordarme</string>

    <string name="iniciarSesion"><u>Iniciar Sesión</u></string>

    <string name="datosOlvidados">Usuiario nuevo? Por favor </string>

    <string name="contraOlvidada">Olvidaste tu contraseña? </string>

    <string name="boton_crearCuenta"><u> Crea una cuenta</u></string>

    <string name="boton_claveNueva"><u> Recuperar contraseña </u></string>

    <string name="infoRegistro"> Por favor ingresa tus datos </string>

    <string name="infoRegistro2"> Ingresa tu Mail y alias</string>

    <string name="mail_registro">Mail</string>

    <string name="mailUsado">El mail ya esta en uso, </string>

    <string name="inicioSesionMailUsado"> quiere <font color="#E25683">iniciar sesión </font> ?</string>

    <string name="alias">Alias</string>

    <string name="Usuario">Usuario</string>

    <string name="alumno">Alumno</string>

    <string name="verificarDatos">Verificar Datos</string>

    <string name="notif_verificar">Al presionar <font color="#E25683"> <u>Verificar Datos</u></font> ,  Se enviará un mail con un código para finalizar la registración. Este codigo expira en 24 horas.</string>

    <string name="saludoRecuperarContra">Restaurar Contraseña</string>

    <string name="info_layoutRecuperarContra">Por favor, ingrese el código que el enviamos al Mail para seguir con la recuperación</string>

    <string name="mensajeCodigo">Ingrese el código que le enviamos al Mail</string>

    <string name="enviarCodigo">Enviar</string>

    <string name="codigo">Código</string>

    <string name="contraNueva">Ingrese contraseña</string>

    <string name="titulo_registroUsuario">Usuario</string>

    <string name="titulo_registroAlumno">Alumno</string>

    <string name="infoRegistroUsuario">Por favor ingrese sus datos para finalizar con el registro</string>

    <string name="infoRegistroAlumno">Ingrese un método de pago y foto de su DNI para convertirse en Alumno </string>

    <string name="nombre">Nombre</string>

    <string name="apellido">Apellido</string>

    <string name="contra">Contraseña</string>

    <string name="confContra">Confirmar Contraseña</string>

    <string name="edad">Edad</string>

    <string name="dni">DNI</string>

    <string name="crearcuenta">Crear Cuenta</string>

    <string name="terminos">Al presionar <font color="#E25683"> Crear Cuenta </font>,  Estas aceptando nuestros
        <font color="#E25683">Términos y condiciones</font> asi como las <font color="#E25683">Políticas de Privacidad</font></string>

    <string name="numeroTarjeta"> N° de tarjeta </string>

    <string name="fotoFrente">DNI Frente</string>

    <string name="fotoDorso">DNI Dorso</string>

    <string name="infoDni">Suba foto de su DNI</string>

    <string name="nroTramite">N° de Trámite</string>

    <string name="cuentacorriente">Cuenta Corriente</string>

    <string name="notifRegisAlumno">Registrarse como alumno es <font color="#E25683"> Gratuito </font>. Solo se cobrará si te inscribes en un curso.</string>

    <string name="saludoCodigo">Verifique su cuenta</string>

    <string name="codigoRecuperarContra">Recuperar contraseña</string>

    <string name="aceptar">Aceptar</string>

    <string name="ingreseContraseñaNueva">Ingrese la contraseña nueva</string>


</resources>



