<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"

    android:background="@drawable/background">


    <ImageButton
        android:id="@+id/btn_volver"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/btn_volver"
        android:contentDescription="@string/regresar"
        android:contextClickable="true"
        android:onClick="btn_volver"
        app:layout_constraintBottom_toTopOf="@id/saludo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:srcCompat="@drawable/chevron_left__1_" />

    <TextView
        android:id="@+id/saludo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/saludo"
        android:textSize="40sp"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.12"

        />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoRegistro"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/saludo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.02"

        />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoRegistro2"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/info1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.01"
        />


    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/marco_edit_text"
        android:hint="@string/mail_registro"
        android:layout_margin="10dp"
        android:paddingStart="42dp"
        android:paddingEnd="2dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/info2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"


        />

    <TextView
        android:id="@+id/mailEnUso"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/quicksand_bold"
        android:padding="5dp"
        android:text="@string/mailUsado"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintVertical_bias="0.03"
        />

    <Button
        android:id="@+id/btn_inicioSesionMailEnUso"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="16sp"
        android:text="@string/inicioSesionMailUsado"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mailEnUso"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0"
        android:visibility="invisible"

        android:onClick="btnVolverInicio"/>


    <ImageView
        android:id="@+id/mail_image"
        android:layout_width="32dp"
        android:layout_height="45dp"
        android:contentDescription="@string/hint_mail"
        app:layout_constraintBottom_toBottomOf="@id/mail"
        app:layout_constraintEnd_toEndOf="@id/mail"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@id/mail"
        app:layout_constraintTop_toTopOf="@id/mail"
        app:srcCompat="@drawable/mail__1_" />

    <EditText
        android:id="@+id/ingreseAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/marco_edit_text"
        android:inputType="text"
        android:hint="@string/alias"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:paddingStart="42dp"
        android:paddingEnd="2dp"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicioSesionMailEnUso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"

        />

    <ImageView
        android:id="@+id/alias_image"
        android:layout_width="32dp"
        android:layout_height="45dp"
        android:contentDescription="@string/alias"
        app:layout_constraintBottom_toBottomOf="@+id/ingreseAlias"
        app:layout_constraintEnd_toEndOf="@+id/ingreseAlias"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/ingreseAlias"
        app:layout_constraintTop_toTopOf="@+id/ingreseAlias"
        app:srcCompat="@drawable/user" />


    <TextView
        android:id="@+id/notifText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="17sp"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/rosa_rojo"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/ingreseAlias"
        app:layout_constraintBottom_toTopOf="@id/btn_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"

        />


    <Button
        android:id="@+id/btn_usuario"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_off"
        android:text="@string/Usuario"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/ingreseAlias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.45"

        android:onClick="seleccionarUsuario"
        />

    <Button
        android:id="@+id/btn_alumno"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_off"
        android:layout_margin="10dp"
        android:text="@string/alumno"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/ingreseAlias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45"

        android:onClick="seleccionarAlumno"
        />

    <Button
        android:id="@+id/verificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_iniciar_sesion"
        android:text="@string/verificarDatos"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_book"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"

        android:onClick="verificarDatos"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notif_verificar"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:justificationMode="inter_word"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/verificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>